[tool.poetry]
name = "relay-payments"
version = "0.1.0"
description = ""
authors = ["Eugene Moshchyn <eugene.moshchyn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
