[tool.poetry]
name = "relay-payments"
version = "0.1.0"
description = ""
authors = ["Eugene Moshchyn <eugene.moshchyn@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.0.0"
tabulate = "^0.9.0"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
